# iSurvMQJ

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: demo.ipynb
isurvmqj/: __init__.py  alpha_net.py  isurvj.py  isurvmq.py
