[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isurvmqj"
version = "1.0.0"
authors = [
  { name = "NTAILab" }
]
description = "A survival analysis package utilizing imprecise probabilistic models with trainable kernels."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
readme = { file = "README.md" }

[tool.setuptools.packages.find]
where = ["."]
include = ["isurvmqj*"]

[project.urls]
"Homepage" = "https://github.com/NTAILab/iSurvMQJ"
